--- a/src/index.html
+++ b/src/index.html
@@ -38,13 +38,21 @@
       <h2>Score: <span class="score">0</span></h2>
       <div id="board"></div>
       <div class="alert hidden">
-        <h3>Поздравляю тебя, <br />пупс!!!</h3>
+        <h3>
+          ❤️
+          <br />Поздравляю тебя, <br />пупс!!! <br />❤️ <br />Ты набрала
+          <br />
+          <span class="currentScore"></span>
+        </h3>
         <button class="ok" type="submit">
-          <p>Пупс любит папу!</p>
+          <p>🥰 Пупс любит папу! 🥰</p>
         </button>
       </div>
       <div class="warning hidden">
-        <h2>Нет хода в этом направлении!</h2>
+        <h2>
+          😢
+          <br />Ходы закончились <br />😢
+        </h2>
         <button class="restart" type="submit">
           <p>Начать заново</p>
         </button>
