--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- favicon -->
-    <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="./assets/images/favicon-51852217.png" />
+    <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="./assets/images/favicon-9b23376a.png" />
     <!-- Mobile (Android, iOS & others) -->
-    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="./assets/images/favicon-51852217.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="./assets/images/favicon-9b23376a.png" />
     <link
       rel="apple-touch-icon"
       sizes="57x57 72x72 114x114 120x120 144x144 152x152"
-      href="./assets/images/favicon-51852217.png"
+      href="./assets/images/favicon-9b23376a.png"
     />
     <!-- Windows 8 Tiles -->
     <meta name="msapplication-TileImage" content="/assets/favicon.png" />
@@ -47,6 +47,7 @@
           <br />Поздравляю тебя, <br />пупс!!! <br />❤️ <br />Ты набрала
           <br />
           <span class="currentScore"></span>
+          <br />🐐
         </h3>
         <button class="ok" type="submit">
           <p>🥰 Пупс любит папу! 🥰</p>
@@ -58,7 +59,7 @@
           <br />Ходы закончились <br />😢
         </h2>
         <button class="restart" type="submit">
-          <p>Начать заново</p>
+          <p>🐌 Начать заново 🐈</p>
         </button>
       </div>
     </div>
