favicon changed, emojies added

--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,7 @@
           <br />Поздравляю тебя, <br />пупс!!! <br />❤️ <br />Ты набрала
           <br />
           <span class="currentScore"></span>
+          <br />🐐
         </h3>
         <button class="ok" type="submit">
           <p>🥰 Пупс любит папу! 🥰</p>
@@ -54,7 +55,7 @@
           <br />Ходы закончились <br />😢
         </h2>
         <button class="restart" type="submit">
-          <p>Начать заново</p>
+          <p>🐌 Начать заново 🐈</p>
         </button>
       </div>
     </div>
