--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <title>2048-EVITA</title>
     
-    <script type="module" crossorigin src="./assets/js/main-2822664f.js"></script>
+    <script type="module" crossorigin src="./assets/js/main-d442da69.js"></script>
     <link rel="stylesheet" href="./assets/css/index-b50176ec.css">
     <script type="module">import.meta.url;import("_").catch(()=>1);async function* g(){};window.__vite_is_modern_browser=true;</script>
     <script type="module">!function(){if(window.__vite_is_modern_browser)return;console.warn("vite: loading legacy chunks, syntax error above and the same error below should be ignored");var e=document.getElementById("vite-legacy-polyfill"),n=document.createElement("script");n.src=e.src,n.onload=function(){System.import(document.getElementById('vite-legacy-entry').getAttribute('data-src'))},document.body.appendChild(n)}();</script>
@@ -44,9 +44,12 @@
       <div class="alert hidden">
         <h3>
           ❤️
-          <br />Поздравляю тебя, <br />пупс!!! <br />❤️ <br />Ты набрала
+          <br />Поздравляю тебя, <br />пупс!!! <br />❤️ <br />Ты набрала:
           <br />
           <span class="currentScore"></span>
+          <br />следующая цель:
+          <br />
+          <span class="nextTarget"></span>
           <br />🐐
         </h3>
         <button class="ok" type="submit">
@@ -65,6 +68,6 @@
     </div>
     <script nomodule>!function(){var e=document,t=e.createElement("script");if(!("noModule"in t)&&"onbeforeload"in t){var n=!1;e.addEventListener("beforeload",(function(e){if(e.target===t)n=!0;else if(!e.target.hasAttribute("nomodule")||!n)return;e.preventDefault()}),!0),t.type="module",t.src=".",e.head.appendChild(t),t.remove()}}();</script>
     <script nomodule crossorigin id="vite-legacy-polyfill" src="./assets/js/polyfills-legacy-47b9203e.js"></script>
-    <script nomodule crossorigin id="vite-legacy-entry" data-src="./assets/js/main-legacy-8d8d6f53.js">System.import(document.getElementById('vite-legacy-entry').getAttribute('data-src'))</script>
+    <script nomodule crossorigin id="vite-legacy-entry" data-src="./assets/js/main-legacy-f4a9f87f.js">System.import(document.getElementById('vite-legacy-entry').getAttribute('data-src'))</script>
   </body>
 </html>
