game logics improved and fixed

--- a/src/index.html
+++ b/src/index.html
@@ -40,9 +40,12 @@
       <div class="alert hidden">
         <h3>
           ❤️
-          <br />Поздравляю тебя, <br />пупс!!! <br />❤️ <br />Ты набрала
+          <br />Поздравляю тебя, <br />пупс!!! <br />❤️ <br />Ты набрала:
           <br />
           <span class="currentScore"></span>
+          <br />следующая цель:
+          <br />
+          <span class="nextTarget"></span>
           <br />🐐
         </h3>
         <button class="ok" type="submit">
